clustering: add class for clustering results

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ endif()
 
 #########################################################################################
 
-add_executable(${MAIN_EXECUTABLE} "main.cpp" "information_criteria.hpp")
+add_executable(${MAIN_EXECUTABLE} "main.cpp" "information_criteria.hpp" "clustering.hpp")
 add_executable(${TEST_EXECUTABLE} "information_criteria_test.cpp")
 
 target_link_libraries( ${TEST_EXECUTABLE} gtest )
