clustering: added unit test for Clustering initialization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,6 @@ endif()
 #########################################################################################
 
 add_executable(${MAIN_EXECUTABLE} "main.cpp" "information_criteria.hpp" "clustering.hpp")
-add_executable(${TEST_EXECUTABLE} "test_main.cpp" "information_criteria_test.cpp")
+add_executable(${TEST_EXECUTABLE} "test_main.cpp" "information_criteria_test.cpp" "clustering_test.cpp")
 
 target_link_libraries( ${TEST_EXECUTABLE} gtest )
