Add space weather simulator submodule (Catalyst branch)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ttk"]
 	path = ttk
 	url = https://github.com/topology-tool-kit/ttk
+[submodule "ipicmini"]
+	path = ipicmini
+	url = https://github.com/pierre-guillou/ipicmini
